<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">RMLL/LSM</string>
	<string name="search_help">To search press the Android search key</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_about">About</string>
	<string name="menu_testing">Testing</string>
	<string name="menu_update">Update</string>
    <string name="menu_quit">Quit</string>
	<string name="search_label">Search</string>
	<string name="fetched_events">Fetched %d event(s)…</string>
	<string name="downloading">Downloading…</string>
	<string name="stored_events">Stored %d events…</string>
	<string name="done_fetching">Done fetching, loading into DB…</string>
	<string name="done_intodb">Done loading into DB</string>
	<string name="db_ver">Database last updated: %s</string>
	<string name="trackslist_title">Tracks for %s</string>
	<string name="eventslist_title">%1$s - %2$s</string>
	<string name="settings_description">RMLL search</string>   
	<string name="menu_test_display_event">Display event</string>
	<string name="menu_prefetch_rooms">Prefetch Maps</string> 
	<string name="synchronize_button">Synchronize</string>
	<string name="synchronize_title">Synchronize</string>
	<string name="synchronize_description">Synchronizes the schedule with the one from RMLL online.\n\nYou need a connection to the Internet for this to work.</string>
	<string name="about_text1">RMLL Schedule application</string>
	<string name="about_text2">Adapted from the Fosdem schedule application by: Emmanuel Bouthenot</string>
	<string name="about_text3">The Fosdem schedule application was orginally programmed by: Michaël Uyttersprot, Pieter Iserbyt and Christophe Vandeplas.</string> 
	<string name="favorites">Favorites</string>
	<string name="favorites_event_removed">Event removed from favorites</string>
	<string name="favorites_event_added">Event added to favorites</string>
	<string name="share">Share…</string>
	<string name="updater_title">What do you want to update?</string>
	<string-array name="updater_dialog_choices">
		<item name="updater_dialog_choices_xml">Update schedule contents</item>
		<item name="updater_dialog_choices_rooms">Preload room images</item>
	</string-array>
	<string name="day1">Saturday</string>
	<string name="day2">Sunday</string>
	<string name="day3">Monday</string>
	<string name="day4">Tuesday</string>
	<string name="day5">Wednesday</string>
	<string name="day6">Thursday</string>
	<string name="notifications">Notifications</string>
	<string name="enable_notifications">Enable notifications</string>
	<string name="enable_notifications_help">If checked, this will notify you of upcoming events you favorited</string>
	<string name="vibrate">Vibrate</string>
	<string name="vibrate_help">Vibrate on notifications</string>
	<string name="flash_led">Flash led</string>
	<string name="flash_led_help">Blink led on notification</string>
	<string name="notification_time">Notification time</string>
	<string name="notification_time_help">Delay before getting notified of an upcoming favorite event</string>
	<string name="favorites_upcoming">Only show upcoming</string>
	<string name="favorites_upcoming_help">If checked, this will ony show the upcoming favorites in the list</string>
	<string name="track">Track %s</string>
	<string name="test">test</string>
	<string name="room_image">Room image</string>
	
</resources>