<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/notifications">
		<CheckBoxPreference
			android:title="@string/enable_notifications"
			android:defaultValue="true"
			android:summary="@string/enable_notifications_help"
			android:key="notifyPref"
		/>
		<CheckBoxPreference
			android:title="@string/vibrate"
			android:defaultValue="true"
			android:summary="@string/vibrate_help"
			android:key="vibratePref"
		/>
		<CheckBoxPreference
			android:title="@string/flash_led"
			android:defaultValue="true"
			android:summary="@string/flash_led_help"
			android:key="ledPref"
		/>
		<EditTextPreference
			android:title="@string/notification_time"
			android:defaultValue="10"
			android:summary="@string/notification_time_help"
			android:key="delayPref"
			android:inputType="number"
			android:digits="0123456789"
			android:maxLength="3"
		/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/favorites">
		<CheckBoxPreference
			android:title="@string/favorites_upcoming"
			android:defaultValue="false"
			android:summary="@string/favorites_upcoming_help"
			android:key="upcomingPref"
		/>
	</PreferenceCategory>
</PreferenceScreen>