<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_label"
        android:showAsAction="always" />

    <item android:id="@+id/action_refresh"
        android:icon="@drawable/menu_refresh"
        android:title="@string/menu_update"
        android:showAsAction="always" />

    <item android:id="@+id/action_favorites"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/favorites"
        android:showAsAction="always" />

    <item android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/menu_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="never" />
</menu>