<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/solid_white"
    >
    <LinearLayout
        android:orientation="horizontal"
		android:id="@+id/header"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:background="@drawable/main_bg">
	</LinearLayout>
	<LinearLayout
		android:id="@+id/btn_days"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_below="@id/header"
		>
		<Button
			android:id="@+id/btn_day_1"
			android:text="@string/day1"
			android:layout_width="fill_parent"
			android:layout_height="60dip"
			android:layout_weight="1"
			android:textSize="20sp"
			/>
		<Button
			android:id="@+id/btn_day_2"
			android:text="@string/day2"
			android:layout_width="fill_parent"
			android:layout_height="60dip"
			android:layout_weight="1"
			android:textSize="20sp"
			/>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/btn_days1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/btn_days"
		>
		<Button
			android:id="@+id/btn_day_3"
			android:text="@string/day3"
			android:layout_width="fill_parent"
			android:layout_height="60dip"
			android:layout_weight="1"
			android:textSize="20sp"
		/>
		<Button
			android:id="@+id/btn_day_4"
			android:text="@string/day4"
			android:layout_width="fill_parent"
			android:layout_height="60dip"
			android:layout_weight="1"
			android:textSize="20sp"
		/>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/btn_days2"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/btn_days1"
		>
		<Button
			android:id="@+id/btn_day_5"
			android:text="@string/day5"
			android:layout_width="fill_parent"
			android:layout_height="60dip"
			android:layout_weight="1"
			android:textSize="20sp"
		/>
		<Button
			android:id="@+id/btn_day_6"
			android:text="@string/day6"
			android:layout_width="fill_parent"
			android:layout_height="60dip"
			android:layout_weight="1"
			android:textSize="20sp"
		/>
	</LinearLayout>

	<RelativeLayout
		android:id="@+id/texts"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true">
		<TextView  
		    android:id="@+id/progress"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:textColor="@drawable/solid_black" />
	    <TextView  
		    android:id="@+id/db_ver"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:layout_below="@id/progress"
		    android:textColor="@drawable/solid_black"
		    android:text="@string/db_ver" />
	</RelativeLayout>

	<Button
	    android:id="@+id/btn_day_7"
	    android:layout_width="fill_parent"
	    android:layout_height="60dip"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/btn_days2"
	    android:layout_weight="1"
	    android:text="@string/day7"
	    android:textSize="20sp" />

	<Button
	    android:id="@+id/btn_favorites"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/btn_day_7"
	    android:text="@string/favorites"
	    android:textSize="20sp" />

	<Button
	    android:id="@+id/btn_search"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/btn_favorites"
	    android:text="@string/search_help"
	    android:textSize="20sp" />

</RelativeLayout>
